2003-06-27  Dietmar Maurer  <dietmar@ximian.com>

	* threadpool.c (mono_thread_pool_add): keep a reference to the
	AsyncResult to prevent GC

Thu Jun 26 12:13:25 CEST 2003 Paolo Molaro <lupus@ximian.com>

	* class.c: leak fix.

2003-06-25  Dick Porter  <dick@ximian.com>

	* threadpool.c (mono_thread_pool_add): Don't set up a finaliser
	for the async object, the WaitHandle object will close the handle.
	Fixes bug 45321.

Wed Jun 25 18:12:29 CEST 2003 Paolo Molaro <lupus@ximian.com>

	* class.c: in mono_array_class_get (), lookup from the hash with the
	same type we insert: this works around a bug in
	mono_metadata_type_hash() with SZARRAY and fixes a leak reported by
	lluis. The real fix will have to wait for after the release.

Wed Jun 25 13:14:41 CEST 2003 Paolo Molaro <lupus@ximian.com>

	* icall.c: fix memory leak when getting type members.

Mon Jun 23 16:12:48 CEST 2003 Paolo Molaro <lupus@ximian.com>

	* reflection.c: added more pubtoken special cases.

Mon Jun 23 15:29:06 CEST 2003 Paolo Molaro <lupus@ximian.com>

	* class.c: handle field offset correctly when class size
	is set (bug# 45182, partially from a patch by jlaban@wanadoo.Fr (Jerome Laban)).

2003-06-20  Martin Baulig  <martin@ximian.com>

	* mono-debug-debugger.h (MonoDebuggerSymbolFile): Added `MonoImage
	*image' field.

2003-06-20  Martin Baulig  <martin@ximian.com>

	* image.h, mono-debug-debugger.h: Fixed compiler warnings.

2003-06-20  Martin Baulig  <martin@ximian.com>

	* mono-debug.h (MONO_DEBUG_VAR_ADDRESS_MODE_STACK): Removed.  We
	just distinguish between variables in registers and variables at
	an offset relative to a register.

2003-06-20  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* icall.c: #ifdef out latest changes until mcs is fixed.

Thu Jun 19 11:03:42 CEST 2003 Paolo Molaro <lupus@ximian.com>

	* icall.c: return members in metadata order.

Wed Jun 18 15:26:58 CEST 2003 Paolo Molaro <lupus@ximian.com>

	* icall.c: avoid infinite loop in GetTimeZoneData.
